[gd_scene load_steps=5 format=3 uid="uid://c53lx7xfo6plg"]

[ext_resource type="Script" uid="uid://bfp5ggec2srsa" path="res://src/actors/npcs/blacksmith/ui/equipment_socket_gem_system_ui.gd" id="1_gpbmg"]
[ext_resource type="PackedScene" uid="uid://1ncexewymhat" path="res://src/actors/npcs/blacksmith/ui/esgs_gem_panel.tscn" id="2_g1wd2"]
[ext_resource type="PackedScene" uid="uid://c5tsjt1f7haeq" path="res://src/actors/npcs/blacksmith/ui/esgs_inventory_panel.tscn" id="3_yloce"]
[ext_resource type="PackedScene" uid="uid://cml4qe2ykru6p" path="res://src/actors/npcs/blacksmith/ui/esgs_avalable_gem_panel/esgs_available_gem_panel.tscn" id="4_g1wd2"]

[node name="EquipmentSocketGemSystemUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_gpbmg")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -260.0
offset_right = 608.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="ESGSGemPanel" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_g1wd2")]
custom_minimum_size = Vector2(460, 480)
layout_mode = 2

[node name="ESGSInventoryPanel" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_yloce")]
custom_minimum_size = Vector2(740, 480)
layout_mode = 2
size_flags_vertical = 4

[node name="ESGSAvailableGemPanel" parent="MarginContainer" instance=ExtResource("4_g1wd2")]
visible = false
layout_mode = 2
